# Celery3D

./: .gitignore  LICENSE  LICENSE-HARDWARE  LICENSE-SOFTWARE  LICENSING.md  Makefile  README.md
Vivado/pcie/: .gitignore  pcie.xpr
constraints/: kc705_hdmi.xdc
docs/: ADV7511_Programming_Guide.txt  Glide_Reference_Manual_3.0_199806.txt  ug810_KC705_Eval_Bd.txt  voodoo_graphics.txt
libcelery/: Makefile
libcelery/demos/: cube_demo.cpp
libcelery/include/: celery.h
libcelery/src/: celery_sim.cpp
rtl/: Makefile
rtl/board_test/: Makefile  build_board_test.tcl  ddr3_test_top.sv  kc705_board_test.sv  kc705_board_test.xdc  program_board.tcl
rtl/clocking/: clock_gen.sv
rtl/constraints/: celery_k7.xdc  ddr3_fb_test.xdc  ddr3_test.xdc  gpu_ddr3.xdc  hdmi_k7.xdc
rtl/core/: alpha_blend.sv  celery_pkg.sv  depth_buffer.sv  edge_eval.sv  framebuffer.sv  perspective_correct.sv  rasterizer.sv  rasterizer_top.sv  texture_unit.sv  triangle_setup.sv
rtl/i2c/: i2c_master.sv
rtl/init/: adv7511_init.sv
rtl/scripts/: program_ddr3.tcl  program_ddr3_fb.tcl  program_gpu_ddr3.tcl  program_hdmi.tcl  synth_ddr3_fb_test.tcl  synth_ddr3_test.tcl  synth_gpu_ddr3.tcl  synth_hdmi.tcl  synth_rasterizer.tcl
rtl/sim/: tb_hdmi.cpp  (+3 more)
scripts/: build.tcl  check_syntax.tcl  open_hwmgr.tcl  program.tcl  synth_only.tcl
sim/reference/: CMakeLists.txt
sim/reference/include/: celery_types.h  framebuffer.h  math_utils.h  rasterizer.h  texture.h
sim/reference/src/: framebuffer.c  main.c  math_utils.c  rasterizer.c  texture.c
sw/: cube_uart.py  test_uart.py
tools/: pcie_test.c
(+53 files in other folders)
